# eattendanceAPI-py

./: .gitignore  .replit  API_DOCUMENTATION.md  DEPLOYMENT_INSTRUCTIONS.md  GIT_FIX_STEPS.md  README.md  REPLIT_PROMPT.md  config.py  face_engine.py  main.py  mysql_schema.sql  pyproject.toml  replit.md  test_connection.py  test_database.py  test_mysql_integration.py
attached_assets/: API_DOCUMENTATION (1)_1759461537956.md  API_UPDATES_USER_TABLE_1759394251334.md  INSIGHTFACE_API_PROMPT_1755137702001.md  Pasted-Create-a-complete-Python-backend-API-for-face-recognition-using-the-InsightFace-library-designed-fo-1755054703427_1755054703427.txt  database_schema_1759394258350.txt
services/: database_service.py  face_service.py
storage/: .gitkeep  faces_db.json
utils/: image_utils.py
